# RedShift

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/: appearance.md  constellation-planner.md  galaxy-planner.md  sky-viewer.md  visibility-score.md  welcome.md
python/: pyproject.toml
python/hooks/: hook-astropy.py
python/src/redshift_backend/: __init__.py  __main__.py  main.py
python/src/redshift_backend/api/: __init__.py  features.py  galaxy_planner.py  health.py  location.py  palettes.py  planner.py  settings.py  sky_viewer.py  sse.py  tools.py
python/src/redshift_backend/core/: config.py  logging.py  paths.py  persistence.py  security.py
python/src/redshift_backend/data/: features.py  location.py  palettes.py  settings.py  sky_viewer.py  tools.py
python/src/redshift_backend/schemas/: feature.py  galaxy_planner.py  location.py  palette.py  planner.py  settings.py  sky_viewer.py  tool.py
python/src/redshift_backend/services/: galaxy_planner_service.py  planner_service.py  stacker_service.py
python/tests/: conftest.py  test_features.py  test_galaxy_planner.py  test_health.py  test_location.py  test_palettes.py  test_persistence.py  test_planner.py  test_settings.py  test_sky_viewer_api.py  test_sky_viewer_data.py  test_sky_viewer_schemas.py  test_tools.py
python_scripts/: constellation_scorer.py  galaxy_scorer.py
python_scripts/assets/: constellations_data.json  pgc_large_galaxies.csv
src/: App.tsx  styles.css  vite-env.d.ts
src/data/: quotes.ts
src/lib/: api.ts  (+12 more)
(+89 files in other folders)
